<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ch.powerunit.demo</groupId>
	<artifactId>collections</artifactId>
	<version>@project.version@ </version>
	<name>Powerunit - Java Testing framework for JDK 1.8 - HelloWorld Maven</name>
	<packaging>jar</packaging>

	<properties>
		<maven.compiler.source>10</maven.compiler.source>
		<maven.compiler.target>10</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jaxb-api.version>2.3.0.1</jaxb-api.version>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>1.6.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>ch.powerunittest.samples.FunctionSamplesTest</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>Test main 1</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<executable>java</executable>
							<longModulepath>false</longModulepath>
							<arguments>
								<argument>--module-path</argument>
								<argument>${project.build.directory}/../../../local-repo/ch/powerunit/extensions/powerunit-extensions-exceptions/@project.version@/powerunit-extensions-exceptions-@project.version@.jar${path.separator}${project.build.directory}/${project.build.finalName}.jar</argument>
								<argument>--module</argument>
								<argument>powerunit.test/ch.powerunittest.samples.CollectionsTest</argument>
								<argument>NO</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>Test main 2</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<executable>java</executable>
							<longModulepath>false</longModulepath>
							<arguments>
								<argument>--module-path</argument>
								<argument>${project.build.directory}/../../../local-repo/org/apache/commons/commons-collections4/4.4/commons-collections4-4.4.jar${path.separator}${project.build.directory}/../../../local-repo/ch/powerunit/extensions/powerunit-extensions-exceptions/@project.version@/powerunit-extensions-exceptions-@project.version@.jar${path.separator}${project.build.directory}/${project.build.finalName}.jar</argument>
								<argument>--add-modules</argument>
								<argument>org.apache.commons.collections4</argument>
								<argument>--module</argument>
								<argument>powerunit.test/ch.powerunittest.samples.CollectionsTest</argument>
								<argument>YES</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>

	<dependencies>
		<dependency>
			<groupId>ch.powerunit.extensions</groupId>
			<artifactId>powerunit-extensions-exceptions</artifactId>
			<version>@project.version@</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-collections4</artifactId>
		    <scope>compile</scope>
		    <optional>true</optional>
		    <version>4.4</version>
		</dependency>
	</dependencies>

</project>
